# GimmeV2

./: Build.md  CMakeLists.txt  README.md  main.c
inc/: bst_utils.h  lib_bst.h  str_utils.h
src/: bst_utils.c  lib_bst.c  str_utils.c
